--- a/src/main/resources/templates/desktop.ini
+++ b/src/main/resources/templates/desktop.ini
@@ -5,3 +5,42 @@ sign.js=@sign.js,0
 work_home_js.js=@work_home_js.js,0
 worker_home.html=@worker_home.html,0
 worker_home_css.css=@worker_home_css.css,0
+away.css=@away.css,0
+away.html=@away.html,0
+away.js=@away.js,0
+boss.css=@boss.css,0
+boss.html=@boss.html,0
+boss.js=@boss.js,0
+boss_home.css=@boss_home.css,0
+boss_home.html=@boss_home.html,0
+boss_home.js=@boss_home.js,0
+bossinfo.css=@bossinfo.css,0
+bossinfo.html=@bossinfo.html,0
+bossinfo.js=@bossinfo.js,0
+departmentinfo.css=@departmentinfo.css,0
+departmentinfo.html=@departmentinfo.html,0
+departmentinfo.js=@departmentinfo.js,0
+departmentinfo_B.css=@departmentinfo_B.css,0
+departmentinfo_B.html=@departmentinfo_B.html,0
+departmentinfo_B.js=@departmentinfo_B.js,0
+leave.css=@leave.css,0
+leave.html=@leave.html,0
+leave.js=@leave.js,0
+S_add.css=@S_add.css,0
+S_add.html=@S_add.html,0
+S_add.js=@S_add.js,0
+S_ALL.css=@S_ALL.css,0
+S_ALL.html=@S_ALL.html,0
+S_ALL.js=@S_ALL.js,0
+S_B.css=@S_B.css,0
+S_B.html=@S_B.html,0
+S_B.js=@S_B.js,0
+S_C.css=@S_C.css,0
+S_C.html=@S_C.html,0
+S_C.js=@S_C.js,0
+statistics.css=@statistics.css,0
+statistics.html=@statistics.html,0
+statistics.js=@statistics.js,0
+workerinfo.css=@workerinfo.css,0
+workerinfo.html=@workerinfo.html,0
+workerinfo.js=@workerinfo.js,0
